# sonogram

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  justfile
.github/workflows/: release-win_aarch64.yml  release-win_x86_64.yml
dockerfiles/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-gnu
src/: lib.rs  main.rs
