[package]
name = "sonogram"
description = "A spectrograph utility written in Rust"
version = "0.7.2"
authors = ["Simon M. Werner <simonwerner@gmail.com>", "Yehor Smoliakov <egorsmkv@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2021"
repository = "https://github.com/crs-org/sonogram"
keywords = ["spectrogram", "spectrograph", "audio", "fft", "dft"]
categories = ["multimedia::images", "science", "multimedia::audio", "visualization"]

[dependencies]
hound = { version = "3.5" }
clap = { version = "4.5", features = ["derive"] }
png = { version = "0.17" }
csv = "1.3"
rustfft = "6.2"
resize = "0.8"
rgb = "0.8.50"
